--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,8 @@ jobs:
         # Install build tools and curl, AND NOW the required X11/Wayland dev libraries
         sudo apt-get install -y build-essential cmake git libcurl4-openssl-dev \
           libx11-dev libxext-dev libxrandr-dev libxcursor-dev libxfixes-dev \
-          libxi-dev libxss-dev libwayland-dev libdecor-0-dev libxkbcommon-dev
+          libxi-dev libxss-dev libwayland-dev libdecor-0-dev libxkbcommon-dev \
+          libfreetype6-dev libharfbuzz-dev
         
         # Build SDL3 from source
         echo "Building SDL3 from source..."
