[v0.9.133] Every build fully runs now even if another one errors, disabled warning for possible loss of data when converting and "unsafe functions".

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false # so that all jobs run even if one fails
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
 
