--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,8 +89,8 @@ jobs:
         elif [ "$RUNNER_OS" == "macOS" ]; then
           cp -r build/Advancely.app release/
         else
-          cp build/Advancely release/
-          cp -r build/resources release/
+          # For Linux, find and copy the generated .deb file
+          find build -name "*.deb" -exec cp {} release/ \;
         fi
 
     - name: Upload Release Artifact
