--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,9 @@ jobs:
 
     - name: Create Debian Package
       if: runner.os == 'Linux'
-      run: cpack --config build/CPackConfig.cmake
+      run:
+        cd build # Change to build directory
+        cpack -C Release
 
     # Create and package the release, resources are included per OS
     - name: Create and Package Release
